@@ -6,8 +6,8 @@ jEdit 5.0 version history
 
 Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust, Dale
 Anson, Matthieu Casanova, Olivier Pisano, Jimmy Chaw, peibl, Robert Schwenn,
-Martin Raspe, Michael Pradel, Max Funk and Jarek Czekalski for contributing to
-this release.
+Martin Raspe, Michael Pradel, Max Funk, SPennington, and Jarek Czekalski for
+contributing to this release.
 
 {{{ Bug fixes
 
@@ -105,6 +105,8 @@ this release.
 
 }}}
 {{{ UI
+
+- Dialog titles in file system browser (SPennington - #2968930, #2807301)
 
 - Standarized Buffer Switcher combo (Jarek Czekalski - #3456572, #3408584)
 
